Style: update exhibition description to white text, remove background, and adjust card border radius

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <header class="exhibition-header">
         <img src="images/header.png" alt="In Common: Sites of Encounter - Exhibition Header" class="exhibition-header-image" />
     </header>
+    <section class="exhibition-description">
+        <p><i>In Common: Sites of Encounter</i> traces the places—both planned and improvised—where people come together. Communities take shape in these spaces: civic buildings, cultural institutions, skateparks, stairwells, and other often-overlooked sites of gathering. Some are designed with intention, others emerge through habit, appropriation, or necessity. All reveal the vital role of space in shaping collective life.</p>
+        <p>Projects on view range from those rooted in architectural strategy to those transformed by the communities they serve. By placing formal and informal sites of encounter in dialogue, the exhibition asks: How does the built environment mediate our relationships? What does it mean for a space to hold, invite, or generate connection?</p>
+        <p>The exhibition is organized around six spatial typologies: <i>Belonging, Culture, Healing, Play, Welcome, and Learning</i>. These categories offer a framework for considering different ways that space fosters encounter. They are not fixed; they overlap, blur, and complicate one another—as do the projects themselves.</p>
+        <p>Architecture is never passive. It frames possibility, encodes power, and holds memory. <i>In Common</i> invites reflection on the visible and invisible forces that shape our shared environments and the encounters that sustain communal life.</p>
+    </section>
 
     <main class="projects-container">
         <!-- Projects will be dynamically inserted here -->
