Update: use new camera SVG icon for floating camera button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         <p>© 2025 Boston Society for Architecture</p>
     </footer>
 
+    <button id="camera-btn" aria-label="Open Camera">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M9 3h6l2 2h4a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h4zm3 16a6 6 0 1 0 0-12a6 6 0 0 0 0 12m0-2a4 4 0 1 1 0-8a4 4 0 0 1 0 8" />
+      </svg>
+      <input type="file" accept="image/*" capture="environment" id="camera-input" style="display:none;">
+    </button>
+
     <script src="script.js"></script>
 </body>
 </html> 
